{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 44,
  "lineage": "c9cf1880-d9bd-83ef-6313-7a9097f019f3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-09dd7a4c5aa1a7db7",
            "arn": "arn:aws:ec2:eu-west-1:182399682571:instance/i-0b00b5d1af383ed62",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0b00b5d1af383ed62",
            "instance_id": "i-0b00b5d1af383ed62",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "launch_time": "2026-09-18T17:55:10Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-02e500ff685eae400",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-2-99.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026354e9fd84d5ea8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fe37c1861aca1f8",
            "tags": {
              "Name": "cmtr-7zh97qyv-private-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05e40c09cdbe5a14c"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-09dd7a4c5aa1a7db7",
            "arn": "arn:aws:ec2:eu-west-1:182399682571:instance/i-0cb367c32246a2faa",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "cmtr-7zh97qyv-ec2-role",
            "id": "i-0cb367c32246a2faa",
            "instance_id": "i-0cb367c32246a2faa",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "launch_time": "2026-09-18T17:57:26Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-00ae10dcee4ff2d04",
            "placement_partition_number": 0,
            "private_dns": "ip-10-0-1-83.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-3-252-134-97.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.252.134.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9de3362eecd6258",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07e737597061affdf",
            "tags": {
              "Name": "cmtr-7zh97qyv-public-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05e40c09cdbe5a14c"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:182399682571:security-group/sg-09b9414489060e9df",
            "description": "Allows HTTP and ICMP access only from the Public HTTP Security Group",
            "egress": [],
            "id": "sg-09b9414489060e9df",
            "ingress": [],
            "name": "cmtr-7zh97qyv-private-http-sg",
            "name_prefix": "",
            "owner_id": "182399682571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cmtr-7zh97qyv"
            },
            "tags_all": {
              "Project": "cmtr-7zh97qyv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7029300970a5a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:182399682571:security-group/sg-0205198bbcb7398fc",
            "description": "Allows HTTP and ICMP access from the allowed IP ranges",
            "egress": [],
            "id": "sg-0205198bbcb7398fc",
            "ingress": [],
            "name": "cmtr-7zh97qyv-public-http-sg",
            "name_prefix": "",
            "owner_id": "182399682571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cmtr-7zh97qyv"
            },
            "tags_all": {
              "Project": "cmtr-7zh97qyv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7029300970a5a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:182399682571:security-group/sg-0da02f3c0ce1c9f5c",
            "description": "Allows SSH and ICMP access from the allowed IP ranges",
            "egress": [],
            "id": "sg-0da02f3c0ce1c9f5c",
            "ingress": [],
            "name": "cmtr-7zh97qyv-ssh-sg",
            "name_prefix": "",
            "owner_id": "182399682571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "cmtr-7zh97qyv"
            },
            "tags_all": {
              "Project": "cmtr-7zh97qyv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd7029300970a5a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_http_icmp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": -1,
            "id": "sgrule-1073424784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-09b9414489060e9df",
            "security_group_rule_id": "sgr-04543bde4d4dd7402",
            "self": false,
            "source_security_group_id": "sg-0205198bbcb7398fc",
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_http",
            "aws_security_group.public_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3171034844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09b9414489060e9df",
            "security_group_rule_id": "sgr-05b594021e72634bd",
            "self": false,
            "source_security_group_id": "sg-0205198bbcb7398fc",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_http",
            "aws_security_group.public_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_http_icmp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32",
              "161.18.206.71/32"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1830241414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0205198bbcb7398fc",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32",
              "161.18.206.71/32"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3619115419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0205198bbcb7398fc",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_icmp_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32",
              "161.18.206.71/32"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-3722963709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0da02f3c0ce1c9f5c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.153.146.156/32",
              "161.18.206.71/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-661885635",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0da02f3c0ce1c9f5c",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh"
          ]
        }
      ]
    }
  ]
}